--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@azure/msal-angular": "^1.0.0-beta.5",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ng-select/ng-select": "^4.0.1",
     "@types/chart.js": "^2.9.21",
     "@types/jspdf": "^1.3.3",
     "angular-bootstrap-md": "^8.10.1",
@@ -37,6 +38,7 @@
     "ng-circular-progress": "^1.0.1",
     "ng2-charts": "^2.3.0",
     "ng2-file-upload": "^1.4.0",
+    "ng2-select": "^2.0.0",
     "ngx-toaster": "^1.0.1",
     "progress-tracker": "^2.0.6",
     "puppeteer": "^3.0.2",
